update playground fun

--- a/playground/index.html
+++ b/playground/index.html
@@ -58,7 +58,7 @@
                                 src="../assets/images/playground/boba-run.png"
                                 alt="Boba Run Game"
                                 loading="lazy"
-                                class="playground-image"/>
+                                class="boba-run-game playground-image"/>
                             </a>
                         </div>
                         <p class="subheader"><a href="https://jclync.github.io/boba-run/" target="_blank">Boba Run</a></p>
@@ -92,9 +92,9 @@
             </div>
             <div class="div-margin">
                 <h2>playground.just for fun</h2>
-                <p class="secondary">ways I stay creative outside of design</p>
+                <p class="secondary">a series of how I stay creative outside of design</p>
                 <div class="fun-container div-margin">
-                    <p>One of my hobbies is crafting with friends - here are some of the things I've created</p>
+                    <p class="tertiary">✢ Crafting: with friends and solo</p>
                     <div class="fun-image-container">
                         <img 
                         src="../assets/images/playground/canvas-painting.png"
@@ -102,8 +102,33 @@
                         loading="lazy"
                         class="fun-image"/>
                         <img 
-                        src="../assets/images/playground/ceramics.png"
+                        src="../assets/images/playground/fun/ceramics.png"
                         alt="ceramics"
+                        loading="lazy"
+                        class="fun-image"/>
+                        <img 
+                        src="../assets/images/playground/fun/pumpkin-painting-1.png"
+                        alt="pumpkin painting"
+                        loading="lazy"
+                        class="pumpkin fun-image"/>
+                    </div>
+                </div>
+                <div class="fun-container div-margin">
+                    <p class="tertiary">✢ Documenting my foodie adventures</p>
+                    <div class="fun-image-container">
+                        <img 
+                        src="../assets/images/playground/fun/nanas.png"
+                        alt="foodie adventure - nana's green tea"
+                        loading="lazy"
+                        class="fun-image"/>
+                        <img 
+                        src="../assets/images/playground/fun/tw-breakfast.png"
+                        alt="foodie adventure - taiwan breakfast sandos"
+                        loading="lazy"
+                        class="fun-image"/>
+                        <img 
+                        src="../assets/images/playground/fun/davelle.png"
+                        alt="foodie adventure - davelle"
                         loading="lazy"
                         class="fun-image"/>
                     </div>
