update href for rh close staticrypt form

--- a/robert-half-digital-modernization/index.html
+++ b/robert-half-digital-modernization/index.html
@@ -63,7 +63,7 @@
         <script>
             const closePassForm = document.getElementById("close");
             closePassForm.addEventListener("click", () => {
-                window.location.href = "../index.html"
+                window.location.href = "../"
             });
         </script>
 
