update case study images

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
         <!-- Playground -->
         <section class="playground section-regular">
-            <h1>Playground &darr;</h1>
+            <h1>Other projects &darr;</h1>
             <div class="playground-grid div-margin">
                 <div class="playground-div linkable">
                     <a href="/social-media-graphics/">
@@ -177,10 +177,10 @@
                         <p class="image-caption">Boba Run</p>
                     </a>
                 </div>
-                <div class="playground-div linkable">
-                    <a href="./assets/file-uploads/vera-project-brand-book.pdf" target="_blank">
+                <div class="playground-div linkable" id="vera-project">
+                    <a href="the-vera-project/" target="_self">
                         <img 
-                            src="./assets/images/playground/vera-project.png"
+                            src="./assets/images/the-vera-project/home-project-image.png"
                             alt="Vera Project Redesign"
                             loading="lazy"
                             class="playground-image"/>
@@ -191,21 +191,8 @@
             </div>
         </section>
 
-        <!-- Password Protected Content Overlay -->
-        <div class="password-protected-content" id="overlay">
-            <div class="password-form">
-                <i class="close-overlay" id="close-overlay">
-                    <i class="fa-solid fa-x fa-xl"></i>   
-                </i>
-                <h1>Password Protected Case Study</h1>
-                <p class="password-prompt">Please enter the password below.<br>&#40;contact me or check my submitted resume&#41;</p>
-                <input type="password" placeholder="Password" id="password-input" style="margin-bottom:1rem">
-                <button class="submit-button" id="submit-button">Submit</button>
-            </div>
-        </div>
-
         <!-- Contact section -->
-        <section class="contact-me">
+        <section class="hidden contact-me">
 
         </section>
 
