--- a/playground/index.html
+++ b/playground/index.html
@@ -65,16 +65,15 @@
                         <p>Game inspired by Cookie Run, coded entirely in JavaScript</p>
                     </div>
                     <div class=playground-item-container>
-                        <div class="playground-item linkable">
-                            <a href="../assets/file-uploads/vera-project-brand-book.pdf" target="_blank">
+                        <div class="playground-item linkable" id="vera-project">
+                            <a href="/the-vera-project/" target="_self">
                                 <img 
-                                src="../assets/images/playground/vera-project.png"
-                                alt="The Vera Project Redesign"
+                                src="../assets/images/the-vera-project/home-project-image.png"
                                 loading="lazy"
                                 class="playground-image"/>
                             </a>
                         </div>
-                        <p class="subheader"><a href="../assets/file-uploads/vera-project-brand-book.pdf" target="_blank">The Vera Project Redesign</a></p>
+                        <p class="subheader"><a href="/the-vera-project/" target="_self">The Vera Project Redesign</a></p>
                         <p>Rebranding a local music & arts non-profit community space</p>
                     </div>
                     <div class="playground-item-container">
