update vera case study

--- a/index.html
+++ b/index.html
@@ -157,6 +157,16 @@
         <section class="playground section-regular">
             <h1>Other projects &darr;</h1>
             <div class="playground-grid div-margin">
+                <div class="playground-div linkable" id="vera-project">
+                    <a href="the-vera-project/" target="_self">
+                        <img 
+                            src="./assets/images/the-vera-project/home-project-image.png"
+                            alt="Vera Project Redesign"
+                            loading="lazy"
+                            class="playground-image"/>
+                        <p class="image-caption">The Vera Project Redesign</p>
+                    </a>
+                </div>
                 <div class="playground-div linkable">
                     <a href="/social-media-graphics/">
                         <img 
@@ -174,17 +184,7 @@
                             alt="Boba Run Game"
                             loading="lazy"
                             class="playground-image"/>
-                        <p class="image-caption">Boba Run</p>
-                    </a>
-                </div>
-                <div class="playground-div linkable" id="vera-project">
-                    <a href="the-vera-project/" target="_self">
-                        <img 
-                            src="./assets/images/the-vera-project/home-project-image.png"
-                            alt="Vera Project Redesign"
-                            loading="lazy"
-                            class="playground-image"/>
-                        <p class="image-caption">The Vera Project Redesign</p>
+                        <p class="image-caption">Boba Run Game</p>
                     </a>
                 </div>
                 <a href="/playground/" class="view-more">View more &rarr;</a>
