update uw cerse ideation section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <!-- Projects section -->
         <section class="projects section-bg-color" id="projects">
-            <h1 class="projects-title">Selected Work &darr;</h1>
+            <h1 class="projects-title">Selected Work <span class="mobile-hidden">&darr;</span></h1>
             <div class="project-container div-margin">
                 <a href="/uw-cerse-stem-equity-resource-hub/" target="_self" class="project-link">
                     <img
@@ -134,7 +134,7 @@
                     <p class="project-sponsor secondary">
                         University of Washington HCDE 301
                     </p>
-                    <h1 class="project-title">Instagram Communication Strategy for Mint Mobile</h1>
+                    <h1 class="project-title">Mint Mobile Instagram Communication Strategy</h1>
                     <p class="project-paragraph">
                         Restructuring Mint Mobile's Instagram communication strategy to reinforce their $15/month Premium Wireless offering. 
                     </p>
