--- a/mint-mobile/index.html
+++ b/mint-mobile/index.html
@@ -312,10 +312,10 @@
                         <p class="secondary">Usability Test Finding #03</p>
                         <h3>Lack of diverse content makes the feed less eye-catching</h3>
                         <p>
-                            Participants noticed that the majority of the feed was consisted of static content such as images and text, resulting in a lack of engagement. 
+                            Participants noticed that the majority of the feed was consisted of static content such as images and text, resulting in diverted attention span. 
                         </p>
                         <p>
-                            <b>Recommendation: </b> Utilize a variety of content, such as more reels and videos, to make the feed more visually appealing and engaging.
+                            <b>Recommendation: </b> Utilize a variety of short-form content, such as more reels and videos, to make the feed more visually appealing and engaging.  
                         </p>
                     </div>
                     <div>
