update margins and padding

--- a/about/index.html
+++ b/about/index.html
@@ -55,7 +55,7 @@
                         I seek to bring people together using the products that I create, making meaningful impacts in their lives.
                     </p>
                 </div>
-                <div class="activity-feed mobile-query">
+                <div class="activity-feed tablet-query">
                     <h2>Quick Links</h2>
                     <ul class="bio-list">
                         <li><a href="https://www.linkedin.com/in/jocelyn-chen-/" class="secondary link">LinkedIn&nearr;</a></li>
@@ -88,13 +88,13 @@
                     </ul>
                 </div>
             
-                <div class="quick-links-box">
+                <div class="quick-links-box tablet-hidden">
                     <h2>Quick Links</h2>
                     <ul class="bio-list">
+                        <li><a href="../assets/file-uploads/Jocelyn_Chen_Resume.pdf" target="_blank" class="secondary link">Resume&nearr;</a></li>
                         <li><a href="https://www.linkedin.com/in/jocelyn-chen-/" class="secondary link">LinkedIn&nearr;</a></li>
                         <li><a href="mailto: jocelynchen1126@gmail.com" class="secondary link">Email&nearr;</a></li>
                         <li><a href="https://github.com/jclync" class="secondary link">Coding Projects&nearr;</a></li>
-                        <li><a href="../assets/file-uploads/Jocelyn_Chen_Resume.pdf" target="_blank" class="secondary link">Resume&nearr;</a></li>
                     </ul>
                 </div>
                 <div class="design-philosophy-box hidden">
