--- a/husky-buddy/index.html
+++ b/husky-buddy/index.html
@@ -61,7 +61,7 @@
 
         <!-- Overview Section -->
         <section class="overview-section section-bg-color" id="overview">
-            <div>
+            <div class="div-margin">
                 <h1 class="case-study-title">Husky Buddy</h1>
                 <h3 class="secondary">Creating student connections, one buddy at a time</h3>
                 <p>
@@ -130,7 +130,7 @@
         <!-- Discovery Section -->
         <section class="discovery-section section-bg-color" id="discovery">
             <!-- Interviews -->
-            <div class="interviews">
+            <div class="interviews div-margin">
                 <p class="secondary">Research: Interviews</p>
                 <h2>Deep diving into our problem space</h2>
                 <p>
@@ -140,13 +140,13 @@
             <div class="findings-recommendations-grid div-margin">
                 <p class="secondary">Interview Insights</p>
                 <div class="findings-recommendations-container no-top-border no-top-margin">
-                    <div class="findings-container box">
+                    <div class="findings-container box no-top-margin">
                         <h3>1. Too many communication channels</h3>
                         <p>
                             Students express frustration with having to manage multiple apps for communication, such as Canvas, Instagram, Discord, Messenger, etc.
                         </p>                        
                     </div>
-                    <div class="recommendations-container box">
+                    <div class="recommendations-container box no-bottom-border">
                         <h3>Unified communications hub</h3>
                         <p>
                             A centralized platform serves as a one-stop solution for tracking peers, instructors, and class-related content and communications.
