--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
         <!-- Projects section -->
         <section class="projects section-bg-color" id="projects">
-            <h1 class="projects-title">Selected Work <span class="mobile-hidden">&darr;</span></h1>
-            <div class="project-container div-margin">
+            <h1 class="projects-title">Selected Work</h1>
+            <div class="project-container img-margin">
                 <a href="/uw-cerse-stem-equity-resource-hub/" target="_self" class="project-link">
                     <img
                         src="./assets/images/uw-cerse/home-project-image.png"
@@ -85,7 +85,7 @@
                     </a>
                 </div>
             </div>
-            <div class="project-container div-margin flipped">
+            <div class="project-container img-margin flipped">
                 <div class="project-info">
                     <p class="project-sponsor secondary">
                         Robert Half / Summer Internship
@@ -107,7 +107,7 @@
                     />
                 </a>
             </div>
-            <div class="project-container div-margin">
+            <div class="project-container img-margin">
                 <a href="/husky-buddy/" target="_self" class="project-link">
                     <img
                         src="./assets/images/husky-buddy/home-project-image.png"
@@ -122,14 +122,14 @@
                     </p>
                     <h1 class="project-title">Husky Buddy: Creating Student Connections</h1>
                     <p class="project-paragraph">
-                        Designed a student-centric mobile app for increased engagement and community-building during online learning.
+                        Designed a student-centric mobile app for increased engagement and community-building in an online environment.
                     </p>
                     <a href="/husky-buddy/" target="_self" class="project-link">
                         <button class="project button">View Case Study &#10142;</button>
                     </a>
                 </div>
             </div>
-            <div class="project-container div-margin flipped">
+            <div class="project-container img-margin flipped">
                 <div class="project-info">
                     <p class="project-sponsor secondary">
                         University of Washington HCDE 301
@@ -155,7 +155,7 @@
 
         <!-- Playground -->
         <section class="playground section-regular">
-            <h1>Other projects &darr;</h1>
+            <h1>Other projects</h1>
             <div class="playground-grid div-margin">
                 <div class="playground-div linkable" id="vera-project">
                     <a href="the-vera-project/" target="_self">
@@ -223,7 +223,7 @@
 
         <!-- Website scripts -->
         <script src="assets/js/app.js"></script>
-        <script type="module" src="assets/js/Node.js"></script>
+        <!-- <script type="module" src="assets/js/Node.js"></script> -->
 
         <!-- Ion icons scripts -->
         <script
