--- a/mint-mobile/index.html
+++ b/mint-mobile/index.html
@@ -62,7 +62,7 @@
 
         <!-- Overview Section -->
         <section class="overview-section section-regular" id="overview">
-            <div>
+            <div class="div-margin">
                 <h1 class="case-study-title">
                     Restructuring Mint Mobile's Instagram Communications Strategy
                 </h1>
