--- a/the-vera-project/index.html
+++ b/the-vera-project/index.html
@@ -90,6 +90,9 @@
             <div>
                 <p class="secondary">Communication Goals</p>
                 <h2>Vera is a space of bold expression, creativity, and passion</h2>
+                <p>
+                    To redefine Vera's visual system and make it more cohesive, I brainstormed three main themes that I wanted to align with their mission and values. 
+                </p>
                 <div class="bb-bento-box">
                     <div class="bb-box">
                         <p class="subheader">Bold Expression</p>
