--- a/uw-cerse-stem-equity-resource-hub/index.html
+++ b/uw-cerse-stem-equity-resource-hub/index.html
@@ -50,7 +50,7 @@
         </div>
         
         <!-- Project Image  Section -->
-        <section class="project-image-section section-regular">
+        <section class="project-image-section">
             <div class="image-container flex-column">
                 <img
                     src="../assets/images/uw-cerse/project-image.png"
@@ -761,13 +761,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
-
-
-
                 <p>
                     Using the brainstormed concept ideas, the resource hub website was sketched out first on paper, then wireframed in a low-fidelity prototype. For the full sketches and wireframes, see this <a href="../assets/file-uploads/uw-cerse-wireframes.pdf" target="_blank" class="link underline"><b>document</b></a>.
                 </p>
@@ -943,7 +936,7 @@
                         src="../assets/images/uw-cerse/personalization-flow.gif"
                         alt="Final design - Recommended resources based on user profile"
                         loading="lazy"
-                        class="final-design-image widescreen-xl"/>
+                        class="final-design-image"/>
                     </div>
                 </div>
                 <div class="final-design-container  div-margin">
@@ -958,7 +951,7 @@
                         src="../assets/images/uw-cerse/organization-flow.gif"
                         alt="Final design - Filtering"
                         loading="lazy"
-                        class="final-design-image widescreen-xl"/>
+                        class="final-design-image"/>
                     </div>
                 </div>
                 <div class="final-design-container  div-margin">
@@ -973,7 +966,7 @@
                         src="../assets/images/uw-cerse/staff-flow.gif"
                         alt="Final design - Sharing resources from staff to students"
                         loading="lazy"
-                        class="final-design-image widescreen-xl"/>
+                        class="final-design-image"/>
                     </div>
                 </div>
             </div>
