update uw cerse insights

--- a/husky-buddy/index.html
+++ b/husky-buddy/index.html
@@ -121,7 +121,7 @@
                         <p class="secondary">Product Deliverable</p>
                         <h2>Buddy up</h2>
                         <p> 
-                            Husky Buddy helps students to connect with peers in their classes through community forums and groups, creating a space for encouraged engagement and meeting like-minded individuals beyond the black screens of Zoom University. 
+                            Husky Buddy helps students connect with peers in their classes through community forums and groups, creating a space for encouraged engagement and meeting like-minded individuals beyond the black screens of Zoom University. 
                         </p>
                     </div>
             </div>
