--- a/uw-cerse-stem-equity-resource-hub/index.html
+++ b/uw-cerse-stem-equity-resource-hub/index.html
@@ -417,9 +417,9 @@
         <section class="ideation-section section-regular" id="ideation">
             <div class="findings-recommendations div-margin">
                 <p class="secondary">Highlighted Research Findings & Ideation</p>
-                <h2>What did we uncover?</h2>
+                <h2>Drawing upon research insights for design inspiration</h2>
                 <p>
-                    Our team generated a <b>list of ideas and features to address our users' needs and pain points</b> that we discovered in our research.
+                    Based on the insights we uncovered in our research, our team generated a <b>list of ideas and features to address our users' needs and pain points</b>.
                 </p>
                 <div id="myCarousel" class="tablet-hidden img-margin carousel slide mb-6 carousel-dark" data-bs-ride="carousel">
                     <div class="carousel-indicators">
@@ -437,7 +437,7 @@
                                 <div class="carousel-caption text-start">
                                     <div class="finding-recommendation-item">
                                         <div class="finding-item box">
-                                            <h3>1. Mode of Technology</h3>
+                                            <h3>Insight #01 : Mode of Technology</h3>
                                             <p>
                                                 Students indicated that a website is their most utilized and preferred medium for accessing resources. Some students stated that a mobile app feels limiting, and they mainly access websites such as Indeed, Handshake, and the UW website, through desktop.
                                             </p> 
@@ -467,7 +467,7 @@
                                 <div class="carousel-caption text-start">
                                     <div class="finding-recommendation-item">
                                         <div class="finding-item box">
-                                            <h3>2. Outdated resources</h3>
+                                            <h3>Insight #02 : Outdated resources</h3>
                                             <p>
                                                 Students and staff specified that one of the challenges they face is that many resources are not updated in current time. This prevents them from being able to get up-to-date information, and they may end up missing out on opportunities as a result.
                                             </p> 
@@ -497,7 +497,7 @@
                                 <div class="carousel-caption text-start">
                                     <div class="finding-recommendation-item">
                                         <div class="finding-item box">
-                                            <h3>3. Unclear POC</h3>
+                                            <h3>Insight #03 : Unclear POC</h3>
                                             <p>
                                                 When searching for STEM resources, students and staff faced issues when they had no way to contact the person who published the resource online - with no listed contact information, there was no way to learn more about the resource on the resource they were seeking out.
                                             </p> 
@@ -527,7 +527,7 @@
                                 <div class="carousel-caption text-start">
                                     <div class="finding-recommendation-item">
                                         <div class="finding-item box">
-                                            <h3>4. Accessibility issues</h3>
+                                            <h3>Insight #04 : Accessibility issues</h3>
                                             <p>
                                                 Students had issues with resources being flat-out hard to find, causing them to go down a rabbit hole during their searches. This created frustration as they were unable to get the exact information they wanted and needed.
                                             </p> 
@@ -557,7 +557,7 @@
                                 <div class="carousel-caption text-start">
                                     <div class="finding-recommendation-item">
                                         <div class="finding-item box">
-                                            <h3>5. Community building</h3>
+                                            <h3>Insight #05 : Community building</h3>
                                             <p>
                                                 Students and staff expressed desire for interpersonal relationships, which would enhance social engagement through networking opportunities, as well as provide accountability.
                                             </p> 
@@ -587,7 +587,7 @@
                                 <div class="carousel-caption text-start">
                                     <div class="finding-recommendation-item">
                                         <div class="finding-item box">
-                                            <h3>6. Motivation</h3>
+                                            <h3>Insight #06 : Motivation</h3>
                                             <p>
                                                 Students look for resources that match their interests and majors. Additionally, staff emphasized the importance of highlighting students' diverse backgrounds, goals, and aspirations while seeking out STEM-related resources.
                                             </p> 
@@ -624,7 +624,7 @@
                 <div class="tablet-query img-margin">
                     <div class="finding-recommendation-item img-margin">
                         <div class="finding-item box">
-                            <h3>1. Mode of Technology</h3>
+                            <h3>Insight #01 : Mode of Technology</h3>
                             <p>
                                 Students indicated that a website is their most utilized and preferred medium for accessing resources. Some students stated that a mobile app feels limiting, and they mainly access websites such as Indeed, Handshake, and the UW website, through desktop.
                             </p> 
@@ -647,7 +647,7 @@
                     </div>
                     <div class="finding-recommendation-item img-margin">
                         <div class="finding-item box">
-                            <h3>2. Outdated resources</h3>
+                            <h3>Insight #02 : Outdated resources</h3>
                             <p>
                                 Students and staff specified that one of the challenges they face is that many resources are not updated in current time. This prevents them from being able to get up-to-date information, and they may end up missing out on opportunities as a result.
                             </p> 
@@ -670,7 +670,7 @@
                     </div>
                     <div class="finding-recommendation-item img-margin">
                         <div class="finding-item box">
-                            <h3>3. Unclear POC</h3>
+                            <h3>Insight #03 : Unclear POC</h3>
                             <p>
                                 When searching for STEM resources, students and staff faced issues when they had no way to contact the person who published the resource online - with no listed contact information, there was no way to learn more about the resource on the resource they were seeking out.
                             </p> 
@@ -693,7 +693,7 @@
                     </div>
                     <div class="finding-recommendation-item img-margin">
                         <div class="finding-item box">
-                            <h3>4. Accessibility issues</h3>
+                            <h3>Insight #04 : Accessibility issues</h3>
                             <p>
                                 Students had issues with resources being flat-out hard to find, causing them to go down a rabbit hole during their searches. This created frustration as they were unable to get the exact information they wanted and needed.
                             </p> 
@@ -716,7 +716,7 @@
                     </div>
                     <div class="finding-recommendation-item img-margin">
                         <div class="finding-item box">
-                            <h3>5. Community building</h3>
+                            <h3>Insight #05 : Community building</h3>
                             <p>
                                 Students and staff expressed desire for interpersonal relationships, which would enhance social engagement through networking opportunities, as well as provide accountability.
                             </p> 
@@ -739,7 +739,7 @@
                     </div>
                     <div class="finding-recommendation-item img-margin">
                         <div class="finding-item box">
-                            <h3>6. Motivation</h3>
+                            <h3>Insight #06 : Motivation</h3>
                             <p>
                                 Students look for resources that match their interests and majors. Additionally, staff emphasized the importance of highlighting students' diverse backgrounds, goals, and aspirations while seeking out STEM-related resources.
                             </p> 
