update home page

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </a>
                 <div class="project-info">
                     <p class="project-sponsor secondary">
-                        UW CERSE / Sponsored Senior Capstone
+                        UW CERSE / Sponsored Senior Capstone / Website
                     </p>
                     <h1 class="project-title">SERCH: STEM Equity Resource Community Hub</h1>
                     <p class="project-paragraph">
@@ -88,7 +88,7 @@
             <div class="project-container img-margin flipped">
                 <div class="project-info">
                     <p class="project-sponsor secondary">
-                        Robert Half / Summer Internship
+                        Robert Half / Internship / Business Transformation
                     </p>
                     <h1 class="project-title" id="password-protect-title">Digital Service Products Modernization</h1>
                     <p class="project-paragraph">
@@ -118,7 +118,7 @@
                 </a>   
                 <div class="project-info">
                     <p class="project-sponsor secondary">
-                        University of Washington HCDE 318
+                        UX Design / Mobile
                     </p>
                     <h1 class="project-title">Husky Buddy: Creating Student Connections</h1>
                     <p class="project-paragraph">
@@ -132,7 +132,7 @@
             <div class="project-container img-margin flipped">
                 <div class="project-info">
                     <p class="project-sponsor secondary">
-                        University of Washington HCDE 301
+                        Marketing / Mobile
                     </p>
                     <h1 class="project-title">Mint Mobile Instagram Communication Strategy</h1>
                     <p class="project-paragraph">
