add design sprint

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Hi! I'm Jocelyn, a product designer passionate about to crafting delightful and meaningful experiences that make a positive impact on people's lives."/>
+        <title>Home | Jocelyn Chen's Portfolio</title>
 
         <!--CSS Styles -->
         <link rel="stylesheet" href="assets/css/styles.css" />
@@ -17,8 +18,6 @@
 
         <!-- favicon -->
         <link rel="icon" type="image/x-icon" href="./assets/images/logo.svg">
-
-        <title>Home | Jocelyn Chen's Portfolio</title>
     </head>
     <body class="home-page">
         <!-- Navbar  -->
@@ -86,26 +85,26 @@
                 </div>
             </div>
             <div class="project-container img-margin flipped">
-                <div class="project-info">
-                    <p class="project-sponsor secondary">
-                        Robert Half / Internship / Business Transformation
-                    </p>
-                    <h1 class="project-title" id="password-protect-title">Digital Service Products Modernization</h1>
-                    <p class="project-paragraph">
-                        Reinventing Client and Candidate Digital Service Products: a cross-functional approach to modernization, user experience enhancement, and business value acceleration.
-                    </p>
-                    <a href="/robert-half-digital-modernization/" target="_self" class="project-link">
-                        <button class="password-protect project button" id="password-protect">Password Protected &#10142;</button>
-                    </a>
-                </div>
-                <a href="/robert-half-digital-modernization/" target="_self" class="project-link">
+                <a href="/design-sprint/" target="_self" class="project-link">
                     <img
-                    src="./assets/images/robert-half/home-project-image.png"
-                    alt="Robert Half Summer Internship"
+                    src="./assets/images/design-sprint/home-project-image.png"
+                    alt="Design Sprint"
                     loading="lazy"
-                    class="project-img password-protect"
+                    class="project-img"
                     />
                 </a>
+                <div class="project-info">
+                    <p class="project-sponsor secondary">
+                        UI Design / Visual Design / Mockups 
+                    </p>
+                    <h1 class="project-title">Design Sprints</h1>
+                    <p class="project-paragraph">
+                        Weekly design sprint challenges focusing on UI Design and Visual Design for website, mobile, and physical mockups.
+                    </p>
+                    <a href="/design-sprint/" target="_self" class="project-link">
+                        <button class="project button">View Sprints &#10142;</button>
+                    </a>
+                </div>
             </div>
             <div class="project-container img-margin">
                 <a href="/husky-buddy/" target="_self" class="project-link">
@@ -130,6 +129,36 @@
                 </div>
             </div>
             <div class="project-container img-margin flipped">
+                <a href="/robert-half-digital-modernization/" target="_self" class="project-link">
+                    <img
+                    src="./assets/images/robert-half/home-project-image.png"
+                    alt="Robert Half Summer Internship"
+                    loading="lazy"
+                    class="project-img password-protect"
+                    />
+                </a>
+                <div class="project-info">
+                    <p class="project-sponsor secondary">
+                        Robert Half / Internship / Business Transformation
+                    </p>
+                    <h1 class="project-title" id="password-protect-title">Digital Service Products Modernization</h1>
+                    <p class="project-paragraph">
+                        Reinventing Client and Candidate Digital Service Products: a cross-functional approach to modernization, user experience enhancement, and business value acceleration.
+                    </p>
+                    <a href="/robert-half-digital-modernization/" target="_self" class="project-link">
+                        <button class="password-protect project button" id="password-protect">Password Protected &#10142;</button>
+                    </a>
+                </div>
+            </div>
+            <div class="project-container img-margin">
+                <a href="/mint-mobile/" target="_self" class="project-link">
+                    <img
+                        src="./assets/images/mint-mobile/home-project-image.png"
+                        alt="Mint Mobile Case Study"
+                        loading="lazy"
+                        class="project-img"
+                    />
+                </a> 
                 <div class="project-info">
                     <p class="project-sponsor secondary">
                         Marketing / Mobile
@@ -141,15 +170,7 @@
                     <a href="/mint-mobile/" target="_self" class="project-link">
                         <button class="project button">View Case Study &#10142;</button>
                     </a>
-                </div>
-                <a href="/mint-mobile/" target="_self" class="project-link">
-                    <img
-                        src="./assets/images/mint-mobile/home-project-image.png"
-                        alt="Mint Mobile Case Study"
-                        loading="lazy"
-                        class="project-img"
-                    />
-                </a>   
+                </div>  
             </div>
         </section>
 
